<?xml version="1.0"?>
<package format="3">
  <name>gsmini_ros2</name>
  <version>0.0.1</version>
  <description>wrapper ros2 for gelsight mini</description>

  <maintainer email="giuseppefabio.preziosa@polimi.it">Giuseppe Fabio Preziosa</maintainer>
  <license>MIT</license>

  <!-- Build system per pacchetti Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dipendenze runtime Python/ROS2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Dipendenze per il lancio di nodi -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
